# lexana

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  CMakePresets.json  DFA.h  FiniteStateMachine.h  LADataStructs.h  LexicalAnalyzer.h  README.md  lex-ana.sln  lex-ana.vcxproj  lex-ana.vcxproj.filters  main.cpp
cmake/: run_doxygen.cmake  run_sphinx.cmake
docs/Doxygen/: Doxyfile.xml  _l_a_data_structs_8h.xml  _lexical_analyzer_8h.xml  _r_e_a_d_m_e_8md.xml  classm0st4fa_1_1lexana_1_1_lexical_analyzer.xml  dir_40f5fa7740d7cc63f869ba63320a11f8.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  index.xml  md__c_1_2_users_2mosta_2_desktop_2_projects_2_programming_2_s_d_ks_2lex-ana_2_r_e_a_d_m_e.xml  md__r_e_a_d_m_e.xml  namespacem0st4fa.xml  namespacem0st4fa_1_1lexana.xml  structm0st4fa_1_1lexana_1_1_lexical_analyzer_result.xml  structm0st4fa_1_1lexana_1_1_position.xml  structm0st4fa_1_1lexana_1_1_token.xml
docs/Sphinx/: conf.py  conf.py.in  index.rst
docs/html/: _a_n_s_i_8h.html  _a_n_s_i_8h.js  _a_n_s_i_8h_source.html  _d_f_a_8h.html  _d_f_a_8h.js  _d_f_a_8h_source.html  _finite_state_machine_8cpp.html  _finite_state_machine_8h.html  _finite_state_machine_8h.js  _finite_state_machine_8h_source.html  _l_a_data_structs_8h.html  _l_a_data_structs_8h.js  _l_a_data_structs_8h_source.html  _lexical_analyzer_8h.html  _lexical_analyzer_8h.js  _lexical_analyzer_8h_source.html  _logger_8cpp.html  _logger_8h.html  _logger_8h.js  _logger_8h_source.html  _n_f_a_8h.html  _n_f_a_8h.js  _n_f_a_8h_source.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_f_s_m_tests-members.html  class_f_s_m_tests.html  class_f_s_m_tests.js  class_l_a_tests-members.html  class_l_a_tests.html  class_l_a_tests.js  class_n_f_a_test-members.html  class_n_f_a_test.html  classes.html  classm0st4fa_1_1_deter_finite_automatan-members.html  classm0st4fa_1_1_deter_finite_automatan.html  classm0st4fa_1_1_deter_finite_automatan.js  classm0st4fa_1_1_finite_state_machine-members.html  classm0st4fa_1_1_finite_state_machine.html  (+742 more)
docs/html/search/: all_1.js  (+110 more)
docs/latex/: _a_n_s_i_8h.tex  _a_n_s_i_8h_source.tex  _d_f_a_8h.tex  _d_f_a_8h_source.tex  _finite_state_machine_8cpp.tex  _finite_state_machine_8h.tex  _finite_state_machine_8h_source.tex  _l_a_data_structs_8h.tex  _l_a_data_structs_8h_source.tex  _lexical_analyzer_8h.tex  _lexical_analyzer_8h_source.tex  _logger_8cpp.tex  _logger_8h.tex  _logger_8h_source.tex  _n_f_a_8h.tex  _n_f_a_8h_source.tex  annotated.tex  class_f_s_m_tests.eps  class_f_s_m_tests.tex  class_l_a_tests.eps  class_l_a_tests.tex  class_n_f_a_test.eps  class_n_f_a_test.tex  classm0st4fa_1_1_deter_finite_automatan.eps  classm0st4fa_1_1_deter_finite_automatan.tex  classm0st4fa_1_1_finite_state_machine.eps  classm0st4fa_1_1_finite_state_machine.tex  classm0st4fa_1_1_lexical_analyzer.tex  classm0st4fa_1_1_logger.tex  classm0st4fa_1_1_non_deter_finite_automatan.eps  classm0st4fa_1_1_non_deter_finite_automatan.tex  classstd_1_1tr1_1_1gtest__internal_1_1_get.tex  (+314 more)
examples/: CMakeLists.txt  example 1.cpp  main.cpp
src/: LADataStructs.h  LexicalAnalyzer.h
tests/: CMakeLists.txt  LATests.cpp  fsm.h  lexical analyzer.cpp  nfa.cpp  universal.cpp  universal.h
(+10 files in other folders)
